--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "~3.3.5",
     "jquery-ui": "~1.11.4",
     "highlightjs": "~8.8.0",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "jquery.slimscroll": "~1.3.6"
   }
 }
