--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,45 @@
 {
-  "name": "laraval",
-  "version": "0.0.0",
-  "authors": [
-    "Robin Radic <robin@radic.nl>"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "jquery": "~2.1.4",
-    "jquery.validate": "~1.13.0",
-    "jquery-form": "~3.46.0",
-    "jquery-mockjax": "~2.0.1",
-    "bootstrap": "~3.3.5",
-    "jquery-ui": "~1.11.4",
-    "highlightjs": "~8.8.0",
-    "lodash": "~3.10.1",
-    "jquery.slimscroll": "~1.3.6"
-  }
+    "name": "laraval",
+    "version": "0.1.0",
+    "authors": [
+        "Robin Radic <robin@radic.nl>"
+    ],
+    "license": "MIT",
+    "main": [
+        "resources/assets/jquery.validate.laravel.min.js"
+    ],
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "docs",
+        "lib",
+        "src",
+        "test",
+        "tests",
+        "resources/assets/**/*.{dev.js*}",
+        "resources/assets/vendor",
+        "resources/views",
+        "resources/assets/demo*",
+        ".editorconfig",
+        ".gitignore",
+        ".mversionrc",
+        ".scrutinizer.yml",
+        ".travis.yml",
+        "build.xml",
+        "composer.json",
+        "phpunit.xml",
+        "run"
+    ],
+    "devDependencies": {
+        "jquery": "~2.1.4",
+        "jquery.validate": "~1.13.0",
+        "jquery-form": "~3.46.0",
+        "jquery-mockjax": "~2.0.1",
+        "bootstrap": "~3.3.5",
+        "jquery-ui": "~1.11.4",
+        "highlightjs": "~8.8.0",
+        "lodash": "~3.10.1",
+        "jquery.slimscroll": "~1.3.6"
+    }
 }
