--- a/package.json
+++ b/package.json
@@ -1,40 +1,38 @@
 {
-  "name": "laraval",
-  "version": "1.0.0",
-  "description": "Radic Laravel-jquery-validation ====================",
-  "main": "Gruntfile.js",
-  "directories": {
-    "doc": "docs",
-    "test": "tests"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "grunt watch",
-    "build": "grunt build",
-    "dist": "grunt dist",
-    "prepare": "npm install && bower install && tsd install",
-    "clean": "rm node_modules .sass-cache .tscache resources/assets/vendor resources/assets/types/vendor resources/assets/*.js* resources/assets/*.css* -r"
-  },
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "dotenv": "^1.2.0",
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-ts": "^4.2.0",
-    "grunt-typedoc": "^0.2.3",
-    "grunt-umd": "^2.3.4",
-    "load-grunt-tasks": "^3.3.0",
-    "lodash": "^3.10.1",
-    "mockaroo": "^0.1.6",
-    "time-grunt": "^1.2.1",
-    "typescript": "1.6.2"
-  },
-  "dependencies": {
-    "grunt-bytesize": "^0.1.1"
-  }
+    "name": "laraval",
+    "version": "0.1.0",
+    "description": "Radic Laravel-jquery-validation ====================",
+    "main": "Gruntfile.js",
+    "directories": {
+        "doc": "docs",
+        "test": "tests"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "watch": "grunt watch",
+        "build": "grunt build",
+        "dist": "grunt dist",
+        "prepare": "npm install && bower install && tsd install",
+        "clean": "rm node_modules .sass-cache .tscache resources/assets/vendor resources/assets/types/vendor resources/assets/*.js* resources/assets/*.css* -r"
+    },
+    "author": "Robin Radic",
+    "license": "MIT",
+    "devDependencies": {
+        "dotenv": "^1.2.0",
+        "grunt": "^0.4.5",
+        "grunt-contrib-clean": "^0.6.0",
+        "grunt-contrib-copy": "^0.8.1",
+        "grunt-contrib-sass": "^0.9.2",
+        "grunt-contrib-uglify": "^0.9.2",
+        "grunt-contrib-watch": "^0.6.1",
+        "grunt-ts": "^4.2.0",
+        "grunt-typedoc": "^0.2.3",
+        "grunt-umd": "^2.3.4",
+        "load-grunt-tasks": "^3.3.0",
+        "lodash": "^3.10.1",
+        "mockaroo": "^0.1.6",
+        "time-grunt": "^1.2.1",
+        "typescript": "1.6.2",
+        "grunt-bytesize": "^0.1.1"
+    }
 }
