--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
         "src",
         "test",
         "tests",
-        "resources/assets/**/*.{dev.js*}",
+        "resources/assets/**/*.dev*",
+        "resources/assets/data.json",
         "resources/assets/vendor",
         "resources/views",
         "resources/assets/demo*",
