--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,9 @@
             "homepage": "https://github.com/robinradic"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {
         "php": ">=5.5.9",
-        "caffeinated/beverage": "~3.0"
-    },
-    "require-dev": {
-        "caffeinated/dev": "dev-master@dev"
+        "sebwite/support": "1.0.*"
     },
     "suggest": {
         "laravelcollective/html": "Laraval provides several extensions based on the Form builders from Laravel Collective. Easy form building with awesome validation!"
@@ -25,10 +20,9 @@
             "Radic\\Laraval\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Radic\\Tests\\Laraval\\": "tests/"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
         }
-    },
-    "version": "1.0.0"
+    }
 }
