--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "author": "Robin Radic",
     "license": "MIT",
     "devDependencies": {
-        "dotenv": "^1.2.0",
-        "grunt": "^0.4.5",
-        "grunt-contrib-clean": "^0.6.0",
-        "grunt-contrib-copy": "^0.8.1",
-        "grunt-contrib-sass": "^0.9.2",
-        "grunt-contrib-uglify": "^0.9.2",
-        "grunt-contrib-watch": "^0.6.1",
-        "grunt-ts": "^4.2.0",
-        "grunt-typedoc": "^0.2.3",
-        "grunt-umd": "^2.3.4",
-        "load-grunt-tasks": "^3.3.0",
-        "lodash": "^3.10.1",
-        "mockaroo": "^0.1.6",
-        "time-grunt": "^1.2.1",
+        "dotenv": "1.2.0",
+        "grunt": "0.4.5",
+        "grunt-contrib-clean": "0.6.0",
+        "grunt-contrib-copy": "0.8.1",
+        "grunt-contrib-sass": "0.9.2",
+        "grunt-contrib-uglify": "0.9.2",
+        "grunt-contrib-watch": "0.6.1",
+        "grunt-ts": "4.2.0",
+        "grunt-typedoc": "0.2.3",
+        "grunt-umd": "2.3.4",
+        "load-grunt-tasks": "3.3.0",
+        "lodash": "3.10.1",
+        "mockaroo": "0.1.6",
+        "time-grunt": "1.2.1",
         "typescript": "1.6.2",
-        "grunt-bytesize": "^0.1.1"
+        "grunt-bytesize": "0.1.1"
     }
 }
